--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,7 @@ php:
 before_script:
   - composer self-update
   - composer install --prefer-source
+
+
+script:
+  - vendor/bin/phpcs --standard=PSR2 src/
